<resources>
    <string name="app_name">Logi</string>
    <string name="title_activity_main__app">Logi Explorer</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="name">What is the name?</string>

    <string name="action_settings">Settings</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_maps">Map</string>
    <string name="please_provide_your_name_and_profile_photo">Please provide your name and profile image</string>
    <string name="enter_name">Enter Name</string>
    <string name="go">Go</string>
    <string name="search_here">Search Here....</string>
    <string name="user">User</string>
    <string name="pull_to_see_dashboard">Pull to see Dashboard</string>
    <string name="you_want_to">You Want To?</string>
    <string name="add_place_to_map">Add Place To Map</string>
    <string name="add_geo_boundary">Add Geo-Boundary</string>
    <string name="what_is_the_place_about">What is the place about?</string>
    <string name="add_place">Add Place</string>
    <string name="track">Track</string>
    <string name="call">Call</string>
    <string name="currently_tracking">Currently Tracking</string>
    <string name="_8h_ago">8h Ago</string>
    <string name="no_activites">No Activities</string>
    <string name="what_about_this_pic">What About This Pic..</string>
    <string name="what_about_this_video">What About This Video…</string>
    <string name="post">Post</string>
    <string name="send">Send</string>
    <string name="message">message.....</string>
    <string name="what_about_this_group">What About This Group?</string>
    <string name="chats">Chats</string>
    <string name="hide_location">Hide Location</string>
    <string name="share_location">Share Location</string>
    <string name="hide_geofences">Hide Geofences</string>
    <string name="show_geofences">Show Geofences</string>
    <string name="online">ONLINE</string>
    <string name="offline">OFFLINE</string>
    <string name="away">AWAY</string>
    <string name="image_of_the_user">image of the user</string>
    <string name="image_preview_of_place">image preview of place</string>
    <string name="options_icon">options icon</string>
    <string name="chat">Chat</string>
    <string name="go_to">GO-TO</string>
    <string name="view">View</string>
    <string name="my_places">My Places</string>
    <string name="friends_places">Friends Places</string>
    <string name="l">L</string>
    <string name="p">P</string>
    <string name="chat_image_button">chat image button</string>
    <string name="place_image_button_view">place image button view</string>
    <string name="places">Places</string>
    <string name="conection_status_icon">connection status icon</string>
    <string name="button_to_open_settings_of_user_information">button to open settings of user information</string>
    <string name="pinki_pie">Pinki Pie</string>
    <string name="change_image_of_user">change image of user</string>
    <string name="x">X</string>
    <string name="update">Update</string>
    <string name="log_out">LogOut</string>
    <string name="next">Next</string>
    <string name="back">Back</string>
    <string name="finish">Finish</string>
    <string name="activities">Activities</string>
    <string name="user_status_images">user status images</string>
    <string name="to">TODO</string>
    <string name="status_image_view">status image view</string>
    <string name="gallery_imageview">gallery imageview</string>
    <string name="picture">Picture</string>
    <string name="rose">Rose</string>
    <string name="contacts">Contacts</string>
    <string name="send_to">Send To ..</string>
    <string name="reload_content">reload content</string>
    <string name="subscribe">Subscribe</string>
    <string name="filter_view_http_gizmos">filter_view_http_gizmos</string>
    <!--<string name="promotion_body">Dear Mr./Ms. Last Name: (Use a formal salutation, not a first name, unless you know the person extremely well. If you do not know the persons gender, you can write out their full name. For instance, you could write "Dear Pat Crody" instead of "Dear Mr. Crody" or "Dear Ms. Crody." Note that the person's name is always followed by a colon (:) in a business letter, and not a comma. If you do not know the recipient’s name, it’s still common (and safe) to use the old-fashioned “To Whom It May Concern:”). </string>-->

    <string-array name="places_types">
        <item>What Type Of place is it?</item>
        <item>Home</item>
        <item>Airport</item>
        <item>Amusement Park</item>
        <item>Aquarium</item>
        <item>Art Gallery</item>
        <item>ATM Vendor</item>
        <item>Bakery</item>
        <item>Bank</item>
        <item>Bar</item>
        <item>Beauty Salon</item>
        <item>Beach</item>
        <item>Bicycle Store</item>
        <item>Book Store</item>
        <item>Bowling Alley</item>
        <item>Bus Station</item>
        <item>Cafe</item>
        <item>Campground</item>
        <item>Car Dealer</item>
        <item>Car rental</item>
        <item>Car Repair</item>
        <item>Car Wash</item>
        <item>Casino</item>
        <item>Cemetery</item>
        <item>Church</item>
        <item>City Hall</item>
        <item>Clothing Store</item>
        <item>Convenience Store</item>
        <item>Courthouse</item>
        <item>Dentist</item>
        <item>Doctor</item>
        <item>Electrician</item>
        <item>Electronics Store</item>
        <item>Embassy</item>
        <item>Fire Station</item>
        <item>Florist</item>
        <item>Furniture Store</item>
        <item>Gas Station</item>
        <item>Gym</item>
        <item>Hair Saloon</item>
        <item>Hindu Temple</item>
        <item>Hospital</item>
        <item>Insurance Agency</item>
        <item>Jewelry Store</item>
        <item>Laundry</item>
        <item>Lawyer</item>
        <item>Library</item>
        <item>Local Government Office</item>
        <item>Lodging</item>
        <item>Mosque</item>
        <item>Movie Theater</item>
        <item>Moving Company</item>
        <item>Museum</item>
        <item>Night Club</item>
        <item>Park</item>
        <item>Parking</item>
        <item>Pharmacy</item>
        <item>Plumber</item>
        <item>Police</item>
        <item>Post Office</item>
        <item>Repairer</item>
        <item>Restaurant</item>
        <item>Roofing Contractor</item>
        <item>School</item>
        <item>Shoe Store</item>
        <item>Shopping Mall</item>
        <item>Spa</item>
        <item>Stadium</item>
        <item>Store</item>
        <item>Subway Station</item>
        <item>Supermarket</item>
        <item>Taxi Stand</item>
        <item>Train Station</item>
        <item>Travel Agency</item>
        <item>University</item>
        <item>Veterinary Care</item>
        <item>Zoo</item>
    </string-array>
</resources>
