<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_centerHorizontal="true"
    android:layout_centerVertical="true">

    <TextView
        android:id="@+id/text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="10dp"
        android:text="@string/you_want_to"
        android:textSize="20sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/addPlaceToMap"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/text"
        android:layout_centerHorizontal="true"
        android:layout_margin="10dp"
        android:background="@drawable/round_corner"
        android:text="@string/add_place_to_map" />

    <Button
        android:id="@+id/addGeo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/addPlaceToMap"
        android:layout_centerHorizontal="true"
        android:layout_margin="10dp"
        android:background="@drawable/round_corner"
        android:text="@string/add_geo_boundary" />

</RelativeLayout>