<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:background="@drawable/info_window"
    tools:context=".Stories.HeaderFragment">

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:padding="5dp">

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/add_status_image"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginStart="13dp"
            android:layout_marginTop="13dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="8dp"
            android:padding="5dp"
            tools:src="@drawable/noimage" />

        <TextView
            android:id="@+id/add_status_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignTop="@+id/add_status_button"
            android:layout_marginStart="55dp"
            android:layout_marginTop="28dp"
            android:layout_toEndOf="@+id/add_status_image"
            android:text="@string/no_activites"
            android:textColor="@color/gray"
            android:textSize="18sp"
            android:textStyle="italic" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_marginStart="55dp"
            android:layout_marginTop="35dp"
            android:layout_toEndOf="@+id/add_status_image"
            android:text="@string/activities"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:textStyle="bold" />

        <ImageButton
            android:id="@+id/add_status_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="45dp"
            android:layout_marginEnd="30dp"
            android:background="@color/white"
            android:contentDescription="@string/user_status_images"
            android:src="@drawable/add_status" />

    </RelativeLayout>


</FrameLayout>