<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <TextView
        android:id="@+id/txtclose"
        android:layout_width="33dp"
        android:layout_height="33dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="0dp"
        android:layout_marginEnd="5dp"
        android:background="@drawable/round"
        android:gravity="center"
        android:text="@string/x"
        android:textColor="@color/white"
        android:textStyle="bold" />

    <ImageButton
        android:id="@+id/changeImage"
        android:layout_width="40dp"
        android:layout_height="38dp"
        android:layout_alignParentTop="true"
        android:layout_gravity="center"
        android:layout_marginStart="0dp"
        android:layout_marginTop="180dp"
        android:layout_toEndOf="@+id/imageView"
        android:background="@drawable/circle"
        android:contentDescription="@string/change_image_of_user"
        android:gravity="center"
        android:padding="5dp"
        android:src="@drawable/settings" />

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/imageView"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_gravity="center"
        android:layout_marginTop="18dp"
        android:src="@drawable/lou_pie" />

    <EditText
        android:id="@+id/nameEdittext"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/imageView"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="31dp"
        android:background="@drawable/edittext"
        android:hint="@string/pinki_pie"
        android:enabled="false"
        android:focusable="false"
        android:importantForAutofill="no"
        android:inputType="text"
        android:padding="10dp"
        android:singleLine="true"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textColorHint="@color/black" />

    <ImageButton
        android:id="@+id/changeName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/changeImage"
        android:layout_marginStart="28dp"
        android:layout_marginTop="21dp"
        android:layout_toEndOf="@+id/nameEdittext"
        android:background="@drawable/circle"
        android:src="@drawable/pencil" />

    <TextView
        android:id="@+id/locationView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/nameEdittext"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="5dp"
        android:layout_marginTop="28dp"
        android:layout_marginEnd="5dp"
        android:layout_marginBottom="5dp"
        android:textAlignment="center"
        android:textColor="@color/navy"
        android:textSize="20sp"
        android:textStyle="bold"
        tools:text="Currently Located At : Buea, Bokwango Cameroon" />

    <Button
        android:id="@+id/updateInfo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/locationView"
        android:textColor="@color/white"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="34dp"
        android:background="@drawable/button"
        android:text="@string/update" />

</RelativeLayout>